[package]
description = "Aion Blockchain client"
name = "aion"
# NOTE Make sure to update util/version/Cargo.toml as well
version = "0.2.4"
license = "GPL-3.0"
authors = ["Aion Foundation <admin@aion.network>"]

[dependencies]
log = "0.3"
rustc-hex = "1.0"
clap = "2"
term_size = "0.3"
textwrap = "0.9"
num_cpus = "1.2"
rpassword = "1.0"
ansi_term = "0.10"
parking_lot = "0.5"
toml = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
fdlimit = "0.1"
ws2_32-sys = "0.2"
ctrlc = { git = "https://github.com/paritytech/rust-ctrlc.git" }
jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
sync = { path = "sync" }
acore = { path = "core" }
acore-bytes = { path = "util/bytes" }
acore-io = { path = "util/io" }
blake2b = { path = "util/blake2b" }
equihash = { path = "util/equihash" }
logger = { path = "util/logger" }
acore-stratum = { path = "stratum" }
aion-types = { path = "util/aion-types" }
key = { path = "keystore/key" }
keychain = {path = "keystore/keychain" }
rlp = { path = "util/rlp" }
aion-rpc = { path = "rpc" }
aion-version = { path = "util/version" }
dir = { path = "util/dir" }
panic_hook = { path = "util/panic_hook" }
journaldb = { path = "db/journaldb" }
db = { path = "db/core" }
aion-pb-apiserver = { path = "pb_api"}
tokio = "0.1.13"

[build-dependencies]
rustc_version = "0.2"

[dev-dependencies]
pretty_assertions = "0.1"
ipnetwork = "0.12.6"
tempdir = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = "0.2"

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.2"

[features]
json-tests = ["acore/json-tests"]
test-heavy = ["acore/test-heavy"]
slow-blocks = ["acore/slow-blocks"]
final = ["aion-version/final"]

[[bin]]
path = "aion/main.rs"
name = "aion"

[profile.dev]
debug = true
panic = "unwind"

[profile.release]
debug = false
lto = false
panic = "abort"

[workspace]
members = [
	#"core/types",
	"types",
	"keystore/key/cli",
	"keystore/keychain/cli",
	"sync",
	"util/rlp_compress",
  	"vms",
]
