[package]
description = "aion network rust implementation"
name = "aionr"
# NOTE Make sure to update util/version/Cargo.toml as well
version = "1.3.0"
license = "GPL-3.0"
authors = ["aion foundation <admin@aion.network>"]

[dependencies]
log = "0.3"
rustc-hex = "1.0"
clap = "2"
term_size = "0.3"
textwrap = "0.9"
num_cpus = "1.2"
rpassword = "1.0"
ansi_term = "0.10"
parking_lot = "0.5"
toml = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
fdlimit = "0.1"
tokio = "0.1.13"
ctrlc =             { git = "https://github.com/paritytech/rust-ctrlc.git" }
jsonrpc-core =      { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
acore =             { path = "core", version = "0.1" }
acore-bytes =       { path = "util/bytes" }
acore-io =          { path = "util/io" }
logger =            { path = "util/logger" }
aion-types =        { path = "util/aion-types" }
aion-version =      { path = "util/version" }
dir =               { path = "util/dir" }
rlp =               { path = "util/rlp" }
panic_hook =        { path = "util/panic_hook" }
journaldb =         { path = "db/journaldb" }
key =               { path = "keystore/key" }
keychain =          { path = "keystore/keychain" }
aion-rpc =          { path = "rpc" }
p2p =               { path = "p2p" }

[dev-dependencies]
pretty_assertions = "0.1"
tempdir = "0.3"
regex = "0.2"

[workspace]
members = [
"core",
"db/core",
"db/journaldb",
"json",
"keystore/key/cli",
"keystore/keychain/cli",
"rpc",
"p2p",
"util/aion-types",
"util/avm_abi",
"util/blake2b",
"util/bloom",
"util/bloomchain",
"util/bytes",
"util/crypto",
"util/dir",
"util/equihash",
"util/error",
"util/ethbloom",
"util/io",
"util/logger",
"util/macros",
"util/memory_cache",
"util/panic_hook",
"util/patricia_trie",
"util/plain_hasher",
"util/rlp",
"util/rlp_compress",
"util/rlp_derive",
"util/stats",
"util/table",
"util/trace-time",
"util/trie-standardmap",
"util/triehash",
"util/unexpected",
"util/using_queue",
"util/version",
"util/fixed_point",
"vms"
]

[[bin]]
path = "aion/main.rs"
name = "aion"