[package]
name = "p2p"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]

[dependencies]
log = "0.3"
bincode = "1.0.1"
bytes = "0.4"
byteorder = "1.2.7"
rand = "0.5.5"
uuid = { version = "0.6.5", features = ["v4"] }
serde = "1.0.80"
serde_derive = "1.0.92"
futures = "0.1.26"
tokio = "1.8.4"
tokio-codec = "0.1.1"
parking_lot = "0.5"
acore-bytes =  { path = "../util/bytes" }
aion-version = { path = "../util/version" }