[package]
description = "Aion Protobuf Api Server"
name = "aion-pb-apiserver"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]
build = "build.rs"

[build-dependencies]
protoc-rust = "2.1.1"

[dependencies]
protobuf = { version = "2.1.1"}
log = "0.3"
env_logger = "0.4"
aion-rpc = { path = "../rpc" }
aion-types = { path = "../util/aion-types"}
rustc-hex = "*"
acore-bytes = { path ="../util/bytes" }
parking_lot = "*"
acore-io = { path = "../util/io" }
acore = { path = "../core" }
crossbeam = "0.4.1"
dir = { path = "../util/dir" }

[dependencies.zmq]
version = "0.8.2"
features = ["zmq_has"]

[dev-dependencies]
db = { path = "../db/core" }
sync = { path = "../sync" }
lazy_static = "*"
rand = "*"
