[package]
description = "Aion Protobuf Api Server"
name = "aion-pb-apiserver"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]
build = "build.rs"

[build-dependencies]
protoc-rust = "2.1.1"

[dependencies]
aion-rpc =    { path = "../rpc" }
aion-types =  { path = "../util/aion-types"}
acore-bytes = { path ="../util/bytes" }
acore-io =    { path = "../util/io" }
acore =       { path = "../core" }
dir =         { path = "../util/dir" }
protobuf = "2.1.1"
log = "0.3"
env_logger = "0.4"
rustc-hex = "*"
parking_lot = "0.5"
crossbeam = "0.4.1"

[dependencies.zmq]
version = "0.8.2"
features = ["zmq_has"]

[dev-dependencies]
acore-io = { path = "../util/io" }
db =       { path = "../db/core" }
lazy_static = "1.3.0"
rand = "*"
protobuf = "2.1.1"