[package]
description = "Aion JSON-RPC servers."
name = "aion-rpc"
version = "0.1.0"
license = "GPL-3.0"
authors = ["Aion Foundation <admin@aion.network>"]

[dependencies]
ansi_term = "0.10"
futures = "0.1.6"
log = "0.3"
order-stat = "0.1"
parking_lot = "0.5"
rand = "0.4"
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny-keccak = "1.4.2"
blake2b = { path = "../util/blake2b"}
trace-time = { path = "../util/trace-time" }
tokio = "0.1.13"
transient-hashmap = "0.4"

jsonrpc-core = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
jsonrpc-http-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
jsonrpc-ws-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
jsonrpc-ipc-server = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
jsonrpc-macros = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }
jsonrpc-pubsub = { git = "https://github.com/paritytech/jsonrpc.git", branch = "parity-2.2" }

sync = { path = "../sync" }
acore = { path = "../core" }
acore-bytes = { path = "../util/bytes" }
aion-types = { path = "../util/aion-types"}
ethbloom = { path = "../util/ethbloom"}

key = { path = "../keystore/key" }
aion-version = { path = "../util/version" }
rlp = { path = "../util/rlp" }
stats = { path = "../util/stats" }
solidity = { path = "../vms/solidity" }

[dev-dependencies]
pretty_assertions = "0.1"
macros = { path = "../util/macros" }
