[package]
description = "blockchain sync"
name = "sync"
version = "0.2.0"
authors = ["Well Shang <jia@aion.network>"]

[lib]

[dependencies]
blake2b = { path = "../util/blake2b" }
acore-bytes = { path = "../util/bytes" }
acore-io = { path = "../util/io" }
acore = { path = "../core" }
aion-types = { path = "../util/aion-types"}
db = { path = "../db/core" }
rlp = { path = "../util/rlp" }
aion-version = { path = "../util/version" }

parking_lot = "0.5"
bincode = "1.1.1"
byteorder = "1.3.1"
bytes = "0.4"
clone_all = "0.1.1"
futures = "0.1.25"
java-properties = "1.1.1"
lazy_static = "1.2.0"
log = "0.4.6"
lru-cache = "0.1.1"
mio = "0.6.16"
num = "0.2.0"
rand = "0.6.5"
rustc-hex= "2.0.1"
serde = "1.0.87"
serde_derive = "1.0.87"
socket2 = "0.3.8"
state = "0.4.1"
threadpool = "1.7.1"
time = "0.1"
tokio = "0.1.15"
tokio-codec = "0.1.1"
tokio-current-thread = "0.1.4"
tokio-executor = "0.1.6"
tokio-io = "0.1.11"
tokio-reactor = "0.1.8"
tokio-tcp = "0.1.3"
tokio-threadpool = "0.1.11"
uuid = { version = "0.7.2", features = ["v4"] }
