[package]
description = "blockchain sync"
name = "sync"
version = "0.3.0"
authors = ["Well Shang <jia@aion.network>"]

[lib]

[dependencies]
blake2b = { path = "../util/blake2b" }
acore-bytes = { path = "../util/bytes" }
acore-io = { path = "../util/io" }
acore = { path = "../core" }
aion-types = { path = "../util/aion-types"}
db = { path = "../db/core" }
rlp = { path = "../util/rlp" }
aion-version = { path = "../util/version" }

parking_lot = "0.7.1"
bincode = "1.1.2"
byteorder = "1.3.1"
bytes = "0.4"
futures = "0.1.25"
lazy_static = "1.3.0"
log = "0.4.6"
lru-cache = "0.1.1"
rand = "0.6.5"
rustc-hex= "2.0.1"
serde = "1.0.89"
serde_derive = "1.0.89"
state = "0.4.1"
threadpool = "1.7.1"
tokio = "0.1.17"
tokio-codec = "0.1.1"
tokio-threadpool = "0.1.12"
uuid = { version = "0.7.2", features = ["v4"] }
