[package]
name = "common-types"
description = "common types"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]

[dependencies]
rlp         = { path = "../util/rlp" }
rlp_derive  = { path = "../util/rlp_derive" }
acore-bytes = { path = "../util/bytes" }
aion-types  = { path = "../util/aion-types"}
ethbloom    = { path = "../util/ethbloom"}
ajson       = { path = "../json" }
heapsize    = "0.4"

[dev-dependencies]
rustc-hex = "2.0.1"