[package]
name = "common-types"
description = "Common types used throughout the codebase"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]

[dependencies]
rlp = { path = "../../util/rlp" }
rlp_derive = { path = "../../util/rlp_derive" }
acore-bytes = { path = "../../util/bytes" }
aion-types = { path = "../../util/aion-types"}
ethbloom = { path = "../../util/ethbloom"}
ajson = { path = "../../json" }
blake2b = { path = "../../util/blake2b" }
heapsize = "0.4"

[dev-dependencies]
rustc-hex= "1.0"
