[package]

name = "db"
version = "0.0.1"
authors = ["Aion Foundation <admin@aion.network>"]

[dependencies]
elastic-array = "0.9.0"
acore-bytes = { path = "../../util/bytes" }
aion-types = { path = "../../util/aion-types"}
log = "0.3"
num_cpus = "1.0"
parity-rocksdb = "0.5.0"
rand = "0.4"
multimap = "0.4.0"
error-chain = { version = "0.12", default-features = false }
regex = "0.2"
blake2b = {path = "../../util/blake2b" }
rlp = { version = "0.2.1", path = "../../util/rlp" }
parking_lot = "0.5"
interleaved-ordered = "0.1.0"
heapsize = "0.4"
plain_hasher = { path = "../../util/plain_hasher" }
[dev-dependencies]
pretty_assertions = "0.1"
macros = { path = "../../util/macros" }
