[package]
name = "keychain"
version = "0.2.0"
authors = ["Aion Foundation <admin@aion.network>"]
edition = "2018"

[dependencies]
key =        { path = "../key" }
aion-types = { path = "../../util/aion-types" }
crypto =     { path = "../../util/crypto" }
blake2b =    { path = "../../util/blake2b" }
dir =        { path = "../../util/dir" }
rlp =        { path = "../../util/rlp" }
log = "0.3"
libc = "0.2"
rand = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rustc-hex = "1.0"
time = "0.1.34"
itertools = "0.5"
parking_lot = "0.5"
smallvec = "0.4"
subtle = "2.1.0"
uuid = { version = "0.6.5", features = ["v4"] }

[dev-dependencies]
matches = "0.1"
tempdir = "0.3.7"