[package]
description = "Standalone blockchain bloom filter"
homepage = "https://github.com/debris/bloomchain"
name = "bloomchain"
version = "0.2.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
license = "MIT"
keywords = ["ethereum", "core", "bloom", "chain", "filter"]

[dependencies]
ethbloom = { path = "../../util/ethbloom"}

[dev-dependencies]
rustc-hex = "1.0"
rand = "0.4"
