[package]
name = "delta-calc"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]
edition = "2018"

[dependencies]
num-bigint = "0.2"
num-traits = "0.2.5"
lazy_static = "1.3.0"
log = "0.3"
blake2b = { path = "../blake2b" }
fixed-point = { path = "../fixed_point" }
aion-types = { path = "../aion-types" }

[dev-dependencies]
rand = "0.4"