[package]
name = "trie-standardmap"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]
description = "Standard test map for profiling tries"

[dependencies]
acore-bytes = { path = "../bytes" }
aion-types = { path = "../../util/aion-types"}
blake2b= { path = "../blake2b" }
rlp = { path = "../rlp" }
