[package]
name = "triehash"
version = "0.1.0"
authors = ["Aion Foundation <admin@aion.network>"]
description = "in memory patricia trie operations"
license = "GPL-3.0"
edition = "2018"

[dependencies]
rlp =        { path = "../rlp" }
blake2b =    { path = "../blake2b" }
aion-types = { path = "../../util/aion-types"}

[dev-dependencies]
trie-standardmap = { path = "../trie-standardmap" }

[features]
benches = []