[package]
name = "vm_common"
version = "0.1.0"
authors = ["Camus Qiu <camus@aion.network>"]
edition = "2018"

[dependencies]
aion-types = {path = "../../util/aion-types"}
acore-bytes = {path = "../../util/bytes"}
ajson = { path = "../../json"}
rlp = { path = "../../util/rlp" }
blake2b = { path = "../../util/blake2b"}