[package]
name = "vm_common"
version = "0.1.0"
authors = ["Camus Qiu <camus@aion.network>"]

[dependencies]
aion-types = { path = "../../util/aion-types"}
rlp = { path = "../../util/rlp" }
blake2b = { path = "../../util/blake2b" }
common-types = { path = "../../types" }
ajson = { path = "../../json" }
acore-bytes = { path = "../../util/bytes" }
